...
                  fontSize: 25,
                  fontWeight: FontWeight.bold,
                  color: Colors.black,
                ),
              ),
              ElevatedButton(
                      key: Key("Comprar"),
                      onPressed: _hasUserGame ? null : () async {
                        await _buyGame(); // Chama a função _buyGame ao clicar no botão Comprar
                        print(_gameId);
                        print(_userId);
                        
                      },
...
        SizedBox(height: 20),
       Container(
  height: 80,
  padding: EdgeInsets.symmetric(horizontal: 16),
  child: Center(
    child: Row(
      key: Key('textFieldKey'),
      mainAxisAlignment: MainAxisAlignment.spaceBetween, // Ou outro alinhamento horizontal desejado
      children: [
        Expanded(
          child: TextField(
            
            controller: _avaliacaoController,
...
                            ),
                          );
                        }),
                      ),
                      actions: <Widget>[
                        ElevatedButton(
                          key: Key('enviarava'),
                          onPressed: () async {
                            String avaliacaoTexto = _avaliacaoController.text;
                            int notaAvaliacao = selectedStars.where((star) => star).length;

                            // Chamada para enviar avaliação
                            await enviarAvaliacao(notaAvaliacao, avaliacaoTexto);
...
